slight changes in css

--- a/gabble/src/App.css
+++ b/gabble/src/App.css
@@ -1,6 +1,7 @@
 body{
-  background-color: rgb(243, 222, 36);
+  background-color:#E6E294;
   font-size: 1.3rem;
+  /* font-family: "Poppins", sans-serif; */
   
 }
 a{
