--- a/gabble/src/Components/Gab/maingab.css
+++ b/gabble/src/Components/Gab/maingab.css
@@ -1,8 +1,9 @@
 .menus{
-    margin-top: 10%;
-    width: 20%;
-    margin-left: 10%;
+    margin-top: 5%;
+    width: 15%;
+    margin-left: 5%;
     margin-right: 6%;
+    text-align:left;
    
 }
 .flexes{
