--- a/gabble/src/Components/login/login.css
+++ b/gabble/src/Components/login/login.css
@@ -4,7 +4,7 @@
 }
 
 .ip{
-    background-color: rgb(243, 222, 36);
+    background-color: #E6E294;
     border: none;
     outline: none;
     padding: 2%;
